--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A flower shop design website</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <div class="section-container">
-
+    <div class="first-section-container">
+            <div class="title-text">
+                <h1 class="title">Let's make beautiful flowers a part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn-praimary">Shop Now</button>
+            </div>
+            <div class="first-section-img">
+                <img src="/flower-shop-assignment/Flower Asset/pngwing 10.png" alt="">
+            </div>
     </div>
 </body>
 </html>
