--- a/index.html
+++ b/index.html
@@ -10,12 +10,38 @@
     <div class="first-section-container">
             <div class="title-text">
                 <h1 class="title">Let's make beautiful flowers a part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p class="title-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
                 <button class="btn-praimary">Shop Now</button>
             </div>
             <div class="first-section-img">
                 <img src="/flower-shop-assignment/Flower Asset/pngwing 10.png" alt="">
             </div>
+
+           
     </div>
+     <!-- second section  -->
+ 
+        <div class="second-section-heading">
+            <h2 class="title-two">Our Featured Flowers</h2>
+            <p class="title-description-two">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+
+        <div class="second-section-container">
+            <div class="image-one">
+                <img class="img-primary" src="/flower-shop-assignment/Flower Asset/pngwing 6.png" alt="">
+                <p class="title-discription-two">Pink Flower Tree</p>
+            </div>
+            <div class="image-one">
+                <img class="img-primary" src="/flower-shop-assignment/Flower Asset/pngwing 5.png" alt="">
+                <p class="title-discription-two">Pink Flower Tree</p>
+            </div>
+            <div class="image-one">
+                <img class="img-primary" src="/flower-shop-assignment/Flower Asset/pngwing 7.png" alt="">
+                <p class="title-discription-two">Pink Flower Tree</p>
+            </div>
+        </div>
+
+
+
 </body>
 </html>
