aded third section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button class="btn-praimary">Shop Now</button>
             </div>
             <div class="first-section-img">
-                <img src="/flower-shop-assignment/Flower Asset/pngwing 10.png" alt="">
+                <img class="first-image" src="/flower-shop-assignment/Flower Asset/pngwing 10.png" alt="">
             </div>
 
            
@@ -40,6 +40,21 @@
                 <p class="title-discription-two">Pink Flower Tree</p>
             </div>
         </div>
+
+        <!-- section-three -->
+
+        <div class="third-section-container">
+            <div class="section-three-left-part">
+                <h2 class="title-three">Hot Deal ! Sale Up To 25% Off</h2>
+                <p class="third-section-title-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="third-section-btn">Sign Up</button>
+            </div>
+            <div class="section-three-right-part">
+                <img src="/flower-shop-assignment/Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </div>
+
+
 
 
 
