--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <button class="btn-praimary">Shop Now</button>
             </div>
             <div class="first-section-img">
-                <img class="first-image" src="/flower-shop-assignment/Flower Asset/pngwing 10.png" alt="">
+                <img class="first-image" src="/flower-shop-assignment/flower-assets/section11.png" alt="">
             </div>
 
            
@@ -28,15 +28,15 @@
 
         <div class="second-section-container">
             <div class="image-one">
-                <img class="img-primary" src="/flower-shop-assignment/Flower Asset/pngwing 6.png" alt="">
+                <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-1.png" alt="">
                 <p class="title-discription-two">Pink Flower Tree</p>
             </div>
             <div class="image-one">
-                <img class="img-primary" src="/flower-shop-assignment/Flower Asset/pngwing 5.png" alt="">
+                <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-2.png" alt="">
                 <p class="title-discription-two">Pink Flower Tree</p>
             </div>
             <div class="image-one">
-                <img class="img-primary" src="/flower-shop-assignment/Flower Asset/pngwing 7.png" alt="">
+                <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-3.png" alt="">
                 <p class="title-discription-two">Pink Flower Tree</p>
             </div>
         </div>
@@ -50,9 +50,59 @@
                 <button class="third-section-btn">Sign Up</button>
             </div>
             <div class="section-three-right-part">
-                <img src="/flower-shop-assignment/Flower Asset/pngwing 8.png" alt="">
+                <img src="/flower-shop-assignment/flower-assets/section-3.png" alt="">
             </div>
         </div>
+
+        <!-- section-four  -->
+
+        <div class="fourth-section-heading">
+            <h2 class="title-two">Instagram</h2>
+            <p class="title-description-two">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+
+        <div class="fourth-section-container">
+            <div class="image-one">
+                <img src="/flower-shop-assignment/flower-assets/01.png" alt="">
+            </div>
+            <div class="image-two">
+                <img src="/flower-shop-assignment/flower-assets/02.png" alt="">
+            </div>
+            <div class="image-three">
+                <img src="/flower-shop-assignment/flower-assets/03.png" alt="">
+            </div>
+            <div class="image-four">
+                <img src="/flower-shop-assignment/flower-assets/04.png" alt="">
+            </div>
+        </div>
+
+        <!-- section-five  -->
+        <!-- flower-gallary  -->
+
+
+
+        <!-- sectio-six -->
+
+        <div class="bacgraund-image">
+            <h2 class="six-header">Get The Latest Deals</h2>
+            <p class="section-six">$30 coupon for first shopping</p>
+            <div class="form-container">
+                <form class="contact" action="">
+                    <input type="text" placeholder="Enter your email here...">
+                </form>
+                <input class="six-section-botton" type="submit" value="Subscribe">
+            </div>
+    
+            </div>
+         <!-- section-seven  -->
+
+        <footer>
+            <div class="footer-part">
+                <h2 >FlowerShop</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+        </footer>
+
 
 
 
