aded footer part

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p class="section-six">$30 coupon for first shopping</p>
             <div class="form-container">
                 <form class="contact" action="">
-                    <input type="text" placeholder="Enter your email here...">
+                    <input class="input" type="text" placeholder="Enter your email here...">
                 </form>
                 <input class="six-section-botton" type="submit" value="Subscribe">
             </div>
@@ -98,8 +98,9 @@
 
         <footer>
             <div class="footer-part">
-                <h2 >FlowerShop</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <h2 class="title-footer"><span class="title-color">Flower</span>Shop</h2>
+                <p class="discription-footer">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="descpription-two">@2020-2023, FlowerShop.com. All rights reserved. </p>
             </div>
         </footer>
 
