--- a/index.html
+++ b/index.html
@@ -21,23 +21,25 @@
     </div>
      <!-- second section  -->
  
-        <div class="second-section-heading">
-            <h2 class="title-two">Our Featured Flowers</h2>
-            <p class="title-description-two">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        </div>
-
-        <div class="second-section-container">
-            <div class="image-one">
-                <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-1.png" alt="">
-                <p class="title-discription-two">Pink Flower Tree</p>
+        <div class="second-main">
+            <div class="second-section-heading">
+                <h2 class="title-two">Our Featured Flowers</h2>
+                <p class="title-description-two">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             </div>
-            <div class="image-one">
-                <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-2.png" alt="">
-                <p class="title-discription-two">Pink Flower Tree</p>
-            </div>
-            <div class="image-one">
-                <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-3.png" alt="">
-                <p class="title-discription-two">Pink Flower Tree</p>
+    
+            <div class="second-section-container">
+                <div class="image-one">
+                    <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-1.png" alt="">
+                    <p class="title-discription-two">Pink Flower Tree</p>
+                </div>
+                <div class="image-one">
+                    <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-2.png" alt="">
+                    <p class="title-discription-two">Pink Flower Tree</p>
+                </div>
+                <div class="image-one">
+                    <img class="img-primary" src="/flower-shop-assignment/flower-assets/section-2-3.png" alt="">
+                    <p class="title-discription-two">Pink Flower Tree</p>
+                </div>
             </div>
         </div>
 
@@ -77,7 +79,13 @@
         </div>
 
         <!-- section-five  -->
-        <!-- flower-gallary  -->
+        
+            <div class="section-five-container">
+                <div class="image-one">
+                    <img src="/flower-shop-assignment/flower-assets/best-selling-3.png" alt="">
+                    <p></p>
+                </div>
+            </div>
 
 
 
