--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="image-one">
                     <img class="first-image" src="/flower-shop-assignment/flower-assets/faska-1.jpeg" alt="">
-                    <p class="image-text">first image</p>
+                    <p class="image-text">rose flower is beautiful</p>
                 </div>
                 <div class="image-two">
                     <img class="second-image" src="/flower-shop-assignment/flower-assets/faska-2.jpeg" alt="">
